--- a/src/css/StoreListView.module.css
+++ b/src/css/StoreListView.module.css
@@ -39,7 +39,7 @@
 .Dropdown2 {}
 
 
-.Restaurant {
+.RestaurantInStoreList {
     /* display: flex; */
     border: 1px solid rgb(191, 191, 191);
     width: 630px;
