--- a/src/css/CreateStore.module.css
+++ b/src/css/CreateStore.module.css
@@ -24,6 +24,8 @@ section {
   height: 150px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
+  margin-top: 20px;
+  margin-right: 20px;
 
   /* left:30px; */
 }
