--- a/flask-server/templates/StoreListView.html
+++ b/flask-server/templates/StoreListView.html
@@ -32,7 +32,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="RestaurantInStoreList">
+                    <div class="Restaurant RestaurantInStoreList">
                         {% for storedata in storedata %}
                         <div class="listbox">
                             <a href="/StoreDetail/{{storedata[1].storename}}">
@@ -60,8 +60,9 @@
                                 <ul>
                                     <li>
                                         {% for i in range(page_count) %}
-                                        <a href="{{url_for('view_list', page=i)}}" color="black"
-                                            class="pageButton{{i}}">{{i}}</a>
+                                        <!-- href="{{url_for('view_list', page=i)}}" -->
+
+                                        <a color="black" class="pageButton{{i}}">{{i}}</a>
                                         {% endfor %}
                                     </li>
                                 </ul>
