--- a/src/css/StoreListView.module.css
+++ b/src/css/StoreListView.module.css
@@ -48,6 +48,7 @@
     /* box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25); */
     border-radius: 3px;
     overflow: auto;
+    float: left;
 }
 
 .rightbox {
@@ -62,10 +63,15 @@
     width: 630px;
     height: 50%;
     background-color: rgb(107, 107, 107);
+    float: right;
 }
 
 .storelistdetail {
     width: 630px;
     background-color: rgb(255, 255, 255);
     height: 50%;
+    /* visibility: hidden; */
+    float: right;
+    float: bottom;
+
 }
