맛집 모아보기 css 수정
12월 6일 오후 9시 50분

--- a/src/css/Storelist.module.css
+++ b/src/css/Storelist.module.css
@@ -20,40 +20,50 @@
 }
 
 .listdesc {
-    /* display: flex; */
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
     margin-right: 25px;
 }
 
 .StoreName {
-    position: relative;
-    top: 30px;
+    /* position: relative;
+    top: 30px; */
+    line-height: 40px;
     font-size: 18px;
     font-weight: 600;
+    margin-bottom: 10px;
 
 }
 
 .storelocation {
-    position: relative;
-    top: 35px;
+    display:flex;
+    line-height: 20px;
+    /* position: relative;
+    top: 35px; */
 
 }
 
 .locationimg {
-    position: relative;
-    left: -20px;
+
+    /* display:flex; */
+    /* position: relative; */
+    /* left: -20px; */
 }
 
 .locationtext {
-    position: relative;
+    /* display:flex; */
+    /* position: relative;
     top: -23px;
-    left: 15px;
+    left: 15px; */
+    margin: 0px;
     font-size: 10px;
     color: rgb(120, 120, 120);
 }
 
 .Tag {
-    position: relative;
-    bottom: -13px;
+    /* position: relative;
+    bottom: -13px; */
     font-size: 13px;
     font-weight: 800;
 }
