storedetail (맛집세부정보) 데이터 연결

--- a/src/css/Storelist.module.css
+++ b/src/css/Storelist.module.css
@@ -12,11 +12,17 @@
 }
 
 .ImagePart {
-    display: flex;
-    width: 300px;
-    height: 130px;
-    align-items: center;
+    /* display: flex; */
+    width: 295px;
+    height: 125px;
+    /* align-items: center; */
     margin-left: 2px;
+}
+
+.img{
+    width: 295px;
+    height: 125px;
+    object-fit: cover;
 }
 
 .listdesc {
