storedetail 메뉴불러오기 가능+메뉴추가/수정 버튼 활성화

--- a/src/css/Contents.module.css
+++ b/src/css/Contents.module.css
@@ -61,6 +61,11 @@
     padding-right: 60px;
 }
 
+.menulist{
+    height: 540px;
+    overflow: auto;
+}
+
 .image {
     float: center;
     width:50%;
