--- a/src/css/Contents.module.css
+++ b/src/css/Contents.module.css
@@ -55,13 +55,13 @@
     margin: 2px;
 }
 
-.menuPane{
+.Pane{
     padding: 30px;
     padding-left: 60px;
     padding-right: 60px;
 }
 
-.menulist{
+.list{
     height: 540px;
     overflow: auto;
 }
