--- a/src/css/CreateReview.module.css
+++ b/src/css/CreateReview.module.css
@@ -1,99 +1,126 @@
 /* body{
-background-color: #dcdcdc;
-} */
+  background-color: rgb(238, 238, 238);
+  } */
 
-
-.aside {
-  width: 200px;
-  height: 250px;
-  background-color: white;
-  border: 20px solid #dcdcdc;
-  padding: 30px;
-  float: left;
+  section {
+    display: flex;
+    justify-content: center;
+    min-width: 1400px;
+  }
+  
+  .aside {
+    /* width:200px; */
+    height: 400px;
+    /* background-color: rgb(238, 238, 238); */
+    padding: 20px;
+    float: left;
+  }
+  
+  .asideleft {
+    position: relative;
+    background-color: white;
+    /* border: solid #dcdcdc 2px; */
+    width: 230px;
+    /* height: 150px; */
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+    display: flex;
+    /* left:30px; */
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .ImagePart {
+    margin-bottom: 15px;
 }
 
-#table {
-  display: table;
-  width: 900px;
-}
+  .img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    margin-top: 15px;
+  }
 
-.cell {
-  display: table-cell;
-  padding: 3px;
-  border-bottom: 1px solid #DDD;
-}
+  .storename {
+    color: #214832;
+    font-weight: 600;
+    font-size: 25px;
+    margin-bottom: 20px;
+  }
 
-.row {
-  position: relative;
-  background-color: white;
-  left: 80px;
-  top: 20px;
-  border: solid #dcdcdc 0.5px;
-}
-
-.col1 {
-  position: relative;
-  top: 15px;
-  width: 160px;
-  height: 50px;
-}
-
-.col2 {
-  position: relative;
-  top: 15px;
-  height: 50px;
-}
-
-.box {
-  border: 10px solid #dcdcdc;
-}
-
-.adding {
-  float: left;
-  font-weight: bold;
-  font-size: 25px;
-  margin-left: 35px;
-  margin-right: 750px;
-}
-
-.one {
-  float: left;
-  font-size: 14px;
-  margin-right: 40px;
-}
-
-.two {
-  float: left;
-  font-size: 14px;
-  margin-right: 40px;
-}
-
-.three {
-  float: left;
-  font-size: 14px;
-}
-
-.time1 {
-  width: 100px;
-  height: 100px;
-}
-
-.up {
-  color: #214832;
-  line-height: 30px;
-  font-weight: 600;
-  font-size: 25px;
-  text-align: center;
-
-}
-
-.down {
-  border: 3px solid #adb5bd;
-  margin: auto;
-  height: 200px;
-  background-color: #adb5bd;
-  position: absolute;
-  width: 165px;
-  left: 75px;
-  top: 260px;
-}
+  #table {
+    display: table;
+    width: 900px;
+    margin-top: 20px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+    vertical-align: middle;
+  }
+  
+  .cell {
+    display: table-cell;
+    padding: 3px;
+    /* border-bottom: 1px solid #DDD; */
+    text-align: left;
+    font-weight: 600;
+    font-size: 16px;
+  
+  }
+  
+  .row {
+    position: relative;
+    background-color: white;
+    /* left:80px; */
+    /* top :20px; */
+    border: solid #dcdcdc 0.5px;
+  }
+  
+  .col1 {
+    position: relative;
+    /* top:10px; */
+    left: 40px;
+    width: 150px;
+    height: 50px;
+    vertical-align: middle;
+  }
+  
+  .col2 {
+    position: relative;
+    /* top:8px; */
+    height: 50px;
+    vertical-align: middle;
+  }
+  
+  .box {
+    border: 10px solid #dcdcdc;
+  }
+  
+  .adding {
+    float: left;
+    font-weight: bold;
+    font-size: 25px;
+    margin-left: 35px;
+    margin-right: 750px;
+  }
+  
+  
+  .up {
+    color: #214832;
+    line-height: 30px;
+    font-weight: 600;
+    font-size: 25px;
+    text-align: right;
+  
+  }
+  
+  .down {
+    color: #adb5bd;
+    line-height: 50px;
+    font-weight: 600;
+    font-size: 25px;
+    text-align: right;
+  }
+  
+  .down:hover {
+    color: rgb(116, 139, 107);
+  }
