--- a/src/css/Contents.module.css
+++ b/src/css/Contents.module.css
@@ -7,11 +7,33 @@
     text-align: center;
 }
 
+.list::-webkit-scrollbar {
+    width: 1vw; /* THIS WILL RESET THE DEFAULT SCORLLBAR STYLING */
+  }
+  
+  /* TO STYLE THE SCROLLBAR TRACK */
+.list::-webkit-scrollbar-track {
+    background-color: #ffffff; /* THIS WILL SET THE COLOR OF THE SCROLLBAR TRACK */
+  }
+  
+  /* TO STYLE THE SCROLLBAR THUMB */
+.list::-webkit-scrollbar-thumb {
+    background-color: rgb(191, 191, 191);
+    border: 0.2vw solid #ffffff;
+    border-radius: 5vw;
+  }
+
+.img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
 .pane {
     display: inline-block;
     width: 50%;
     border: var(--grayborder);
-    margin: 10px;
+    margin: 20px;
     background-color: rgb(255, 255, 255);
 }
 
