--- a/src/css/HomePage.module.css
+++ b/src/css/HomePage.module.css
@@ -29,7 +29,7 @@ body {
     font-size: 17px;
     line-height: 1.5;
     min-width: 1400px;
-    background-color: #f1f1f1;
+    /* background-color: #f1f1f1; */
     margin-bottom: 200px;
 }
 
