--- a/src/css/StoreListView.module.css
+++ b/src/css/StoreListView.module.css
@@ -1,7 +1,7 @@
 .all {
     display: flex;
     margin-top: 20px;
-    height: 685px;
+    height: 710px;
 }
 
 
@@ -9,6 +9,7 @@
     display: flex;
     align-items: flex-start;
     flex-direction: column;
+    
 }
 
 
@@ -21,11 +22,21 @@
     border-left: 1px solid #C6C6C6;
     padding-top: 5px;
     padding-bottom: 5px;
-    justify-content: space-between
+    justify-content: space-between;
+    border-top-left-radius: 5px ;
+    align-items: center
 }
 
 .Result {
+    display: flex;
     margin-left: 15px;
+    margin-block: 5px;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.number{
+    color: rgb(255, 113, 103);
 }
 
 .dropdown {
@@ -46,23 +57,41 @@
     /* height: 120px; */
     background-color: rgb(255, 255, 255);
     /* box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25); */
-    border-radius: 3px;
     overflow: auto;
+    z-index: 1;
 }
 
+/* STYLING SCROLLBAR */
+
+.Restaurant::-webkit-scrollbar {
+    display: none;
+    width: 0 !important;
+    /* width: 1vw; */
+  }
+  
+  /* TO STYLE THE SCROLLBAR TRACK */
+.Restaurant::-webkit-scrollbar-track {
+    background-color: #ffffff; /* THIS WILL SET THE COLOR OF THE SCROLLBAR TRACK */
+  }
+  
+  /* TO STYLE THE SCROLLBAR THUMB */
+.Restaurant::-webkit-scrollbar-thumb {
+    background-color: rgb(191, 191, 191);
+    border: 0.2vw solid #ffffff;
+    border-top-right-radius: 5vw;
+  }
+
 .rightbox {
-    flex-direction: column;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 3px;
+    /* flex-direction: column; */
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     height: 100%;
     width:630px;
     background-color: rgb(255, 255, 255);
-}
-
-.storemap {
-    width: 630px;
-    height: 50%;
-    background-color: rgb(107, 107, 107);
 }
 
 .storelistdetail {
@@ -70,3 +99,70 @@
     background-color: rgb(255, 255, 255);
     height: 50%;
 }
+
+.loading {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 15px;
+    font-weight: 800;
+    color: rgb(255, 127, 127);
+}
+
+.lds_ellipsis {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds_ellipsis div {
+    position: absolute;
+    top: 33px;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: rgb(255, 199, 199);
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .lds_ellipsis div:nth-child(1) {
+    left: 8px;
+    animation: lds_ellipsis1 0.6s infinite;
+  }
+  .lds_ellipsis div:nth-child(2) {
+    left: 8px;
+    animation: lds_ellipsis2 0.6s infinite;
+  }
+  .lds_ellipsis div:nth-child(3) {
+    left: 32px;
+    animation: lds_ellipsis2 0.6s infinite;
+  }
+  .lds_ellipsis div:nth-child(4) {
+    left: 56px;
+    animation: lds_ellipsis 0.6s infinite;
+  }
+  @keyframes lds_ellipsis1 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes lds_ellipsis3 {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes lds_ellipsis2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(24px, 0);
+    }
+  }
