--- a/src/css/preview.module.css
+++ b/src/css/preview.module.css
@@ -1,6 +1,5 @@
 .prebox {
-    display:flex;
-    flex-direction: column
+    width:100%
 }
 
 .pane {
@@ -11,11 +10,12 @@
     background-color: rgb(255, 255, 255);
 }
 
-.pretitle {
+/* .pretitle {
     line-height: 40px;
-    font-size: 18px;
+    font-size: 25px;
     font-weight: 600;
-}
+    margin-bottom: 20px;
+} */
 
 #paneName {
     font-size: 30px;
@@ -32,61 +32,84 @@
     overflow: auto;
 }
 
-.ImagePart{
-    width: 500px;
-    height: 400px;
-}
-
-.image {
-    float: center;
-    width:50%;
-    border: var(--grayborder);
+.img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
 }
 
 
 /*info */
 
 .info {
+    display: flex;
     font-size: 16px;
-    float: left;
-    width: 50%;
-    text-align: left;
     line-height: 200%;
-    padding: 30px;
-    padding-left: 100px;
-    padding-top: 0px;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 50px;
+    margin-top: 10px;
 }
 
-.StoreName {
+#table {
+    display: table;
+    vertical-align: middle;
+  }
+
+  .cell {
+    display: table-cell;
+    /* padding: 3px; */
+    width: 80px;
+    text-align: left;
+    font-weight: 600;
+    font-size: 16px;
+  }
+  
+  .row {
     position: relative;
-    top: 30px;
+  }
+  
+  .col1 {
+    position: relative;
+    vertical-align: middle;
+  }
+  
+  .col2 {
+    position: relative;
+    vertical-align: middle;
+  }
+
+/* .desc{
+    display: inline;
+    margin-left: 10px;
+} */
+
+.StoreName {
     font-size: 30px;
     font-weight: 600;
-
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .storelocation {
-    position: relative;
-    top: 50px;
-    font-size: 20px;
-
+    display: flex;
+    align-items: center;
+    margin-left: -3px;
+    margin-bottom: 10px;
 }
 
 .locationimg {
-    position: relative;
+    height: 20px;
+    width: 20px;
 }
 
 .locationtext {
-    position: relative;
-    top: -23px;
-    left: 15px;
-    font-size: 10px;
+    font-size: 13px;
     color: rgb(120, 120, 120);
+    margin-bottom: 2px;
 }
 
 .Tag {
-    position: relative;
-    bottom: -13px;
     font-size: 13px;
     font-weight: 800;
 }
@@ -104,4 +127,48 @@
     font-weight: 800;
     top: -24px;
     left: 24px;
+}
+
+.buttons{
+    margin-top: 20px;
+}
+
+.button{
+    margin: 20px;
+    padding-inline: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    box-sizing: border-box;
+    flex-basis: 250px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    /*디자인*/
+    background: #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    border: 1px solid #202020;
+    cursor: pointer;
+    color: #000000;
+    font-family: Arial;
+    font-size: 15px;
+    text-decoration: none;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+}
+
+.button:hover{
+        /* background-color:#0a0a0a; */
+        -webkit-transform: scale(1.05);
+        -moz-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+        -o-transform: scale(1.05);
+        transform: scale(1.05);
+        background-color: var(--egreen);
+        /* color: rgb(255, 255, 255); */
+        -webkit-transition: all 0.4s;
+        -moz-transition: all 0.4s;
+        transition: all 0.4s;
 }
