--- a/src/css/Catagories.module.css
+++ b/src/css/Catagories.module.css
@@ -1,72 +1,48 @@
-/* Navbar container */
-.navbar {
-    overflow: hidden;
-    background-color: #333;
-    font-family: Arial;
-}
-
-/* Links inside the navbar */
-.navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-/* The dropdown container */
 .dropdown {
-    float: left;
-    overflow: hidden;
+    position:relative;
+    display:inlineblock;
 }
 
-/* Dropdown button */
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    /* Important for vertical align on mobile phones */
-    margin: 0;
-    /* Important for vertical align on mobile phones */
-}
-
-/* Add a red background color to navbar links on hover */
-.navbar a:hover,
-.dropdown:hover .dropbtn {
-    background-color: red;
-}
-
-/* Dropdown content (hidden by default) */
-.dropdowncontent {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdowncontent a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
+/* 맨위 */
+.dropbtn:hover {
     display: block;
-    text-align: left;
-}
-
-/* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
     background-color: #ddd;
+    box-shadow: 1px 1px 3px 2px rgba(0, 0, 0, 0.06);
 }
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
+.drpbtn{
+    padding-left : 10px;
+    padding-right: 10px;
+    background : #fff;
+    font-weight: bold;
+    color : #333;
+    display: flex; 
+    align-items: center;
+    justify-content:space-between;
+}
+
+/* 아래 전체 감싸는 */
+.drpcontent {
+    position : absolute;
+    box-shadow: 5px 5px 15px 10px rgba(0, 0, 0, 0.06);
+    color : #333;
+    background: #fff;
+    z-index: 2;
+    padding:0;
+}
+
+/* 종류별 버튼 */
+.drpitem {
+    padding-right : 1rem;
+    padding-left: 1rem;
+    cursor: pointer;
+    transition : all 0.2s;
+    background: #fff;
+    border:0;
+    font-weight: bold;
+    margin:0;
+}
+
+.drpitem:hover {
+    background: #f4f4f4;
 }
