--- a/src/css/StoreListView.module.css
+++ b/src/css/StoreListView.module.css
@@ -4,6 +4,10 @@
     height: 710px;
 }
 
+.allbox{
+    display: flex;
+    flex-direction: row-reverse
+}
 
 .StoreList {
     display: flex;
@@ -11,7 +15,6 @@
     flex-direction: column;
     
 }
-
 
 .TopBar {
     display: flex;
