--- a/src/css/CreateMenu.module.css
+++ b/src/css/CreateMenu.module.css
@@ -115,3 +115,34 @@
     font-size: 25px;
     text-align: right;
   }
+
+  .box_input {
+    font-family: inherit;
+    height: 50%;
+    border: 0;
+    /* background-color:#9b9b9b; */
+    border-color: #9b9b9b;
+    outline: 0;
+    font-size: 1em;
+    color: rgb(0, 0, 0);
+    /* padding: 7px 0; */
+    background:#eeeeee; 
+    transition: background-color 0.2s;
+    border-radius: 4px;
+  }
+  
+  .box_input:focus {
+    /* padding-bottom: 6px; */
+    /* font-weight: 700; */
+    border-width: 3px;
+    /* background-image: linear-gradient(to right, #c6ccc1,#c6ccc1); */
+    border-image-slice: 1;
+    -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    -o-transform: scale(1.05);
+    transform: scale(1.05);
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+  }
