--- a/src/css/HotTopic.module.css
+++ b/src/css/HotTopic.module.css
@@ -33,6 +33,10 @@ body {
     margin-bottom: 200px;
 }
 
+.img{
+    object-fit: cover;
+}
+
 /* input {
     width: 500px;
     height: 32px;
@@ -124,21 +128,6 @@ body {
     transition: all 0.2s ease;
 }
 
-/*리스트*/
-
-.hotlist_container {
-    /* flex-wrap: wrap; */
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    /* padding-bottom: 20px; */
-    box-sizing: content-box;
-    text-align: center;
-    align-items: center;
-    height: 450px;
-
-}
 
 .hotlist {
     margin: 20px;
@@ -221,130 +210,3 @@ body {
     color: rgb(255, 206, 46);
 } */
 
-
-/*버튼있는곳*/
-
-.Hbox {
-    /* width: 100%; */
-    display: flex;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    justify-content: center;
-    min-width: 1400px;
-}
-
-.homeButton {
-    margin: 20px;
-    padding: 20px;
-    box-sizing: border-box;
-    flex-basis: 250px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-    /*디자인*/
-    background: #222228;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    border: 1px solid #202020;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: Arial;
-    font-size: 15px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #2f6627;
-    -webkit-transition: all 0.4s;
-    -moz-transition: all 0.4s;
-    transition: all 0.4s;
-}
-
-.homeButton:hover {
-    /* background-color:#0a0a0a; */
-    -webkit-transform: scale(1.05);
-    -moz-transform: scale(1.05);
-    -ms-transform: scale(1.05);
-    -o-transform: scale(1.05);
-    transform: scale(1.05);
-    background-color: var(--egreen);
-    /* color: rgb(255, 255, 255); */
-    -webkit-transition: all 0.4s;
-    -moz-transition: all 0.4s;
-    transition: all 0.4s;
-}
-
-.homeButton:active {
-    position: relative;
-    top: 1px;
-}
-
-footer {
-    text-align: center;
-}
-
-
-.loading {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 15px;
-    font-weight: 800;
-    color: rgb(255, 127, 127);
-}
-
-.lds_ellipsis {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
-  }
-  .lds_ellipsis div {
-    position: absolute;
-    top: 33px;
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
-    background: rgb(255, 199, 199);
-    animation-timing-function: cubic-bezier(0, 1, 1, 0);
-  }
-  .lds_ellipsis div:nth-child(1) {
-    left: 8px;
-    animation: lds_ellipsis1 0.6s infinite;
-  }
-  .lds_ellipsis div:nth-child(2) {
-    left: 8px;
-    animation: lds_ellipsis2 0.6s infinite;
-  }
-  .lds_ellipsis div:nth-child(3) {
-    left: 32px;
-    animation: lds_ellipsis2 0.6s infinite;
-  }
-  .lds_ellipsis div:nth-child(4) {
-    left: 56px;
-    animation: lds_ellipsis 0.6s infinite;
-  }
-  @keyframes lds_ellipsis1 {
-    0% {
-      transform: scale(0);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  @keyframes lds_ellipsis3 {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(0);
-    }
-  }
-  @keyframes lds_ellipsis2 {
-    0% {
-      transform: translate(0, 0);
-    }
-    100% {
-      transform: translate(24px, 0);
-    }
-  }
