create store duplicate alert
이름이 같으면 알람이 2.5초간 뜹니다

--- a/src/css/CreateStore.module.css
+++ b/src/css/CreateStore.module.css
@@ -77,6 +77,9 @@ section {
   vertical-align: middle;
 }
 
+/* class= {
+  `${styles.cell} ${styles.col2}`
+} */
 .col2 {
   position: relative;
   height: 50px;
@@ -153,4 +156,7 @@ section {
   transition: all 0.4s;
 }
 
-
+.alertbox{
+  display:flex;
+  align-items: center;
+}
