--- a/src/css/SignUp.module.css
+++ b/src/css/SignUp.module.css
@@ -1,68 +1,126 @@
-.SignIn {
+/* .Header {
     float: center;
-    margin: 0;
+} */
+/* 
+.Headline {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 55px;
+    line-height: 65px;
+    color: black;
 }
 
-.SignIn-logo {
-    float: left;
+.Left {
+    position: absolute;
+    width: 540px;
+    height: 443.72px;
+    left: 86px;
+    top: 369px;
+    color: black;
 }
 
-.SignIn-div-Headline {
-    float: center;
+.Right {
+    position: absolute;
+    width: 717px;
+    height: 421.72px;
+    left: 723px;
+    top: 391px;
+    color: black;
+}
+
+.Right-p {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 47px;
     display: flex;
+    align-items: center;
     text-align: center;
 }
 
-.SignIn-table-Th1 {
-    width: 20%;
-    background-color: rgba(217, 217, 217, 0.8);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.24);
-}
-
-.SignIn-table-tr {
-    width: 100%;
-}
-
-#lastLine {
-    border-bottom: none;
-}
-
-.SignIn-table-input {
-    background-color: rgba(217, 217, 217, 0.21);
-    border: 1px solid #000000;
-    box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.25);
+.button {
+    background: #00462A;
     border-radius: 10px;
-    position: absolute;
-    width: 806px;
-    height: 56px;
-    left: 470px;
-
-}
-
-.SignIn-table-input.withButton {
-    width: 615px;
-}
-
-.SignIn-table-Th1-p {
-    font-size: 24px;
-    left: 470px;
-}
-
-.SignIn-table-button {
-    background-color: #00462A;
+    text-align: center;
     color: white;
-    position: absolute;
-    width: 171px;
-    height: 343px;
-    left: 1100px;
+} */
+.container {
+    position: relative;
+    width: 400px;
+    height:250px;
+    padding: 30px 50px;
+    background: #FFF;
+    text-align: center;
+    border-radius: 15px;
+      /* 모달창 크기 */
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+    box-shadow : rgba(0,0,0,0.5) 0 0 0 9999px;
+
+    z-index : 100;
+
+  /* 최상단 위치 */
+  z-index: 999;
+  
+  /* 중앙 배치 */
+  /* top, bottom, left, right 는 브라우저 기준으로 작동한다. */
+  /* translate는 본인의 크기 기준으로 작동한다. */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-#black_button {
-    background-color: black;
+.container::after {
+    content: '';
     position: absolute;
-    width: 337.97px;
-    height: 81px;
-    left: 551px;
-    top: 877px;
-    font-size: 30px;
+    top: -200px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 420px;
+    background-position: top;
+    background-size: cover;
+    z-index: -11;
 }
+
+.inputbox{
+    display: flex;
+    flex-direction: column;
+}
+
+.logindesc{
+
+}
+  
+  /* 모달창 내부 X버튼 */
+  .close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    vertical-align: middle;
+
+    /*디자인*/
+    background: #222228;
+    border-radius: 15px;
+    border: 1px solid #202020;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: 600;
+    text-decoration: none;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+  }
