--- a/src/css/CreateMenu.module.css
+++ b/src/css/CreateMenu.module.css
@@ -39,24 +39,22 @@
     bottom: 30px;
     right: 22px;
   }
-  
   #table {
     display: table;
     width: 900px;
     margin-top: 20px;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 3px;
-  
+    vertical-align: middle;
   }
   
   .cell {
     display: table-cell;
     padding: 3px;
-    border-bottom: 1px solid #DDD;
+    /* border-bottom: 1px solid #DDD; */
     text-align: left;
     font-weight: 600;
     font-size: 16px;
-  
   }
   
   .row {
@@ -69,16 +67,21 @@
   
   .col1 {
     position: relative;
-    top: 10px;
+    /* top:10px; */
     left: 40px;
     width: 150px;
     height: 50px;
+    vertical-align: middle;
   }
   
+  /* class= {
+    `${styles.cell} ${styles.col2}`
+  } */
   .col2 {
     position: relative;
-    top: 8px;
     height: 50px;
+    vertical-align: middle;
+    /* display:inline-block; */
   }
   
   .box {
