--- a/src/css/HomePage.module.css
+++ b/src/css/HomePage.module.css
@@ -76,7 +76,7 @@ body {
     font-family: 'Montserrat';
     text-transform: uppercase;
     font-size: 40px;
-    color: rgb(0, 0, 0);
+    --egreen: #00462A;
     text-decoration: none;
     position: relative;
     display: block;
