--- a/src/css/CreateReview.module.css
+++ b/src/css/CreateReview.module.css
@@ -16,6 +16,10 @@
     float: left;
   }
   
+  .DetailLink:hover{
+    color: rgb(116, 139, 107);
+  }
+
   .asideleft {
     position: relative;
     background-color: white;
