매장명 링크

--- a/src/css/CreateMenu.module.css
+++ b/src/css/CreateMenu.module.css
@@ -103,8 +103,7 @@
   
   
   .up {
-  
-    color: #adb5bd;
+    color:  #214832;
     line-height: 30px;
     font-weight: 600;
     font-size: 25px;
