--- a/src/css/Login.module.css
+++ b/src/css/Login.module.css
@@ -1,76 +1,32 @@
-/* .Header {
-    float: center;
-} */
-/* 
-.Headline {
-    font-family: 'Work Sans';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 55px;
-    line-height: 65px;
-    color: black;
-}
-.Left {
-    position: absolute;
-    width: 540px;
-    height: 443.72px;
-    left: 86px;
-    top: 369px;
-    color: black;
-}
-.Right {
-    position: absolute;
-    width: 717px;
-    height: 421.72px;
-    left: 723px;
-    top: 391px;
-    color: black;
-}
-.Right-p {
-    font-family: 'Work Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 47px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-}
-.button {
-    background: #00462A;
-    border-radius: 10px;
-    text-align: center;
-    color: white;
-} */
 .container {
     position: relative;
     width: 400px;
-    height:250px;
+    height: 250px;
     padding: 30px 50px;
     background: #FFF;
     text-align: center;
     border-radius: 15px;
-      /* 모달창 크기 */
+    /* 모달창 크기 */
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-    box-shadow : rgba(0,0,0,0.5) 0 0 0 9999px;
+    box-shadow: rgba(0, 0, 0, 0.5) 0 0 0 9999px;
 
-    z-index : 100;
+    z-index: 100;
 
-  /* 최상단 위치 */
-  z-index: 999;
-  
-  /* 중앙 배치 */
-  /* top, bottom, left, right 는 브라우저 기준으로 작동한다. */
-  /* translate는 본인의 크기 기준으로 작동한다. */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    /* 최상단 위치 */
+    z-index: 999;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    /* 중앙 배치 */
+    /* top, bottom, left, right 는 브라우저 기준으로 작동한다. */
+    /* translate는 본인의 크기 기준으로 작동한다. */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .container::after {
@@ -86,17 +42,13 @@
     z-index: -11;
 }
 
-.inputbox{
+.inputbox {
     display: flex;
     flex-direction: column;
 }
 
-.logindesc{
-
-}
-  
-  /* 모달창 내부 X버튼 */
-  .close {
+/* 모달창 내부 X버튼 */
+.close {
     position: absolute;
     right: 10px;
     top: 10px;
@@ -119,4 +71,4 @@
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
     transition: all 0.4s;
-  }
+}
